# basic-python-project

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pyvenv.cfg  requirements.txt  script.py  tests.py
.github/workflows/: develop.yml  feature.yml  main.yml  python-cache.yml  python-matrix.yml  python-package.yml  python-test.yml  release.yml
.github/workflows/deprecated/: python-app.yml  python-cache.yml  python-matrix.yml  python-test.yml
src/basic_python_project/: __init__.py  __main__.py  greet.py
tests/: __init__.py  test_greet.py
